Bug 389301 - fit parameter window is not movable
Summary: fit parameter window is not movable
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-22 01:37 UTC by uwestoehr
Modified: 2018-01-28 10:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (215.31 KB, image/jpeg)
2018-01-22 01:37 UTC, uwestoehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2018-01-22 01:37:55 UTC
Created attachment 110036 [details]
screenshot

Opening the fit parameter window covers the definition of the fit equation, see the attached screenshot. It is very helpful to see it. Therefore the fit parameter window should be movable and also resizeable for a proper workflow.
Comment 1 Stefan Gerlach 2018-01-28 10:08:53 UTC
Git commit 2a07d92ec72e389dc6ab692b82fce5a9a70c0299 by Stefan Gerlach.
Committed on 28/01/2018 at 10:07.
Pushed by sgerlach into branch 'master'.

improved position, but menu should stay attached to button.

M  +8    -2    src/kdefrontend/dockwidgets/XYFitCurveDock.cpp
M  +1    -1    src/kdefrontend/widgets/FitParametersWidget.cpp

https://commits.kde.org/labplot/2a07d92ec72e389dc6ab692b82fce5a9a70c0299