BUG: 389301

improved position, but menu should stay attached to button.